--- a/personal.html
+++ b/personal.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="html5reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
 <body>
 	<header>
 	  <nav>
 		<ol>
-			<li><a href = "index.html">About Me</a></li>
+			<li class="active"><a href = "index.html" >About Me</a></li>
 			<li><a href = "personal.html">Family</a></li>
 			<li><a href = "random.html">Random</a></li>
-			<li><a href = "si.umich.edu">UMSI</a></li>
+			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ol>
 	   <nav>
 	</header>
@@ -25,13 +25,15 @@
 	<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 	<br>
-		<img src = "images/wisconsin_dells.jpg" width="200", alt = "" />
-		<img src = "images/badlands.jpg" width="200", alt = ""/>
-		<img src = "images/falling.jpg" width="200", alt = ""/>
-		<img src = "images/jewel_cave.jpg" width="200", alt = ""/>
-		<img src = "images/rushmore.jpg" width="200" alt = ""/>
+		<img src = "images/wisconsin_dells.jpg" width="250", alt = "" />
+		<img src = "images/badlands.jpg" width="250", alt = ""/>
+		<img src = "images/falling.jpg" width="250", alt = ""/>
+		<img src = "images/jewel_cave.jpg" width="250", alt = ""/>
+		<img src = "images/rushmore.jpg" width="250" alt = ""/>
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
