--- a/personal.html
+++ b/personal.html
@@ -10,17 +10,21 @@
 </head>
 <body>
 	<header>
-	  <nav>
-		<ol>
-			<li class="active"><a href = "index.html" >About Me</a></li>
-			<li><a href = "personal.html">Family</a></li>
-			<li><a href = "random.html">Random</a></li>
-			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
-		</ol>
-	   <nav>
+		<!-- Nav is a sematic tag page that aids accessibility -->
+		<nav>
+			<ul>
+				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "personal.html">My Family</a></li>
+				<li><a href = "random.html">Random</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+			</ul>
+		</nav>
+		<!-- The h1 is a semantic tag that aids accessibility -->
+		<h1>Family</h1>
 	</header>
 
-	<h1>Family</h1>
+	
 	
 	<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
